product-details router in progress

--- a/src/index.html
+++ b/src/index.html
@@ -11,9 +11,10 @@
 </head>
 
 <body>
-  <div class="container">
+  <!-- <div class="container">
     <app-root></app-root>
-  </div>
+  </div> -->
+  <app-root></app-root>
 </body>
 
 </html>
